0021727: BRepBuilderAPI_Copy (and possibly other similar tools) create new shape in Frozen state

Set the value of flag Frozen to false for shape created in BRepTools_Modifier. If shape is not newly created then value of flag Frozen don't changed.

Test-case for issue #21727